Handling the observed geometry through a resolution constraint